favicon, ambigram, publication previews

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -18,7 +18,8 @@ year = {2020},
 doi = {10.1117/12.2548589},
 URL = {https://doi.org/10.1117/12.2548589},
 pdf = {https://drive.google.com/file/d/1kgFFl2w84688ZuOqFAK298TC_tpOACq8/view?usp=drive_link},
-selected={true}
+selected={true},
+preview={rigid-deformable.png}
 }
 
 
@@ -38,5 +39,6 @@ year = {2021},
 doi = {10.1117/12.2580891},
 URL = {https://doi.org/10.1117/12.2580891},
 pdf = {https://drive.google.com/file/d/15mceqcOsFydYSP1QNSu1zoSiTNydfRh_/view?usp=drive_link},
-selected={true}
+selected={true},
+preview={needle-detection.png}
 }
