adding first coauthor

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -48,7 +48,7 @@ preview={needle-detection.png}
 
 @article{mukhopadhyay2023diffusion,
 title={Diffusion Models Beat GANs on Image Classification}, 
-author={Soumik Mukhopadhyay and Matthew Gwilliam and Vatsal Agarwal and Namitha Padmanabhan and Archana Swaminathan and Srinidhi Hegde and Tianyi Zhou and Abhinav Shrivastava},
+author={Soumik Mukhopadhyay* and Matthew Gwilliam* and Vatsal Agarwal and Namitha Padmanabhan and Archana Swaminathan and Srinidhi Hegde and Tianyi Zhou and Abhinav Shrivastava},
 year={2023},
 journal={Under Review},
 eprint={2307.08702},
