diff2lip in publications

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,6 +45,18 @@ selected={true},
 preview={needle-detection.png}
 }
 
+@article{mukhopadhyay2023diff2lip,
+title={Diff2Lip: Audio Conditioned Diffusion Models for Lip-Synchronization}, 
+author={Soumik Mukhopadhyay and Saksham Suri and Ravi Teja Gadde and Abhinav Shrivastava},
+year={2023},
+journal={Under Review},
+primaryClass={cs.CV},
+abstract={The task of lip synchronization (lip-sync) seeks to match the lips of human faces with different audio. It has various applications in the film industry as well as for creating virtual avatars and for video conferencing. This is a challenging problem as one needs to simultaneously introduce detailed, realistic lip movements while preserving the identity, pose, emotions, and image quality. Many of the previous methods trying to solve this problem suffer from image quality degradation due to a lack of complete contextual information. In this paper, we present Diff2Lip, an audio-conditioned diffusion-based model which is able to do lip synchronization in-the-wild while preserving these qualities. We train our model on Voxceleb2, a video dataset containing in-the-wild talking face videos. Extensive studies show that our method outperforms popular methods like Wav2Lip and PC-AVS in Fréchet inception distance (FID) metric and Mean Opinion Scores (MOS) of the users. We show results on both reconstruction (same audio-video inputs) as well as cross (different audio-video inputs) settings on Voxceleb2 and LRW datasets. Video results and code can be accessed from our project page ( https://soumik-kanad.github.io/diff2lip ).},
+website = {https://soumik-kanad.github.io/diff2lip/},
+selected = {true},
+preview = {diff2lip.png}
+}
+
 
 @article{mukhopadhyay2023diffusion,
 title={Diffusion Models Beat GANs on Image Classification}, 
@@ -63,3 +75,5 @@ huggingface = {https://huggingface.co/papers/2307.08702},
 selected = {true},
 preview = {diffssl.png}
 }
+
+
