--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -58,6 +58,7 @@ doi = {10.48550/arXiv.2308.09716},
 arxiv = {2308.09716},
 website = {https://soumik-kanad.github.io/diff2lip/},
 pdf = {https://arxiv.org/pdf/2308.09716.pdf},
+huggingface = {https://huggingface.co/papers/2308.09716},
 selected = {true},
 preview = {diff2lip.png}
 }
