--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,11 +45,21 @@ selected={true},
 preview={needle-detection.png}
 }
 
+@article{mukhopadhyay2023diffusion2,
+title={Do text-free diffusion models learn discriminative visual representations?}, 
+author={Soumik Mukhopadhyay* and Matthew Gwilliam* and Yosuke Yamaguchi† and Vatsal Agarwal† and Namitha Padmanabhan and Archana Swaminathan and Tianyi Zhou and Abhinav Shrivastava},
+year={2023},
+journal={Under Review},
+pdf = {https://drive.google.com/file/d/1ZnDbLKVxjwr07YPRVjPrwF0vmnRxeUNe/view?usp=sharing},
+selected = {true},
+preview = {diffssl2.png},
+}
+
 @article{mukhopadhyay2023diff2lip,
 title={Diff2Lip: Audio Conditioned Diffusion Models for Lip-Synchronization}, 
 author={Soumik Mukhopadhyay and Saksham Suri and Ravi Teja Gadde and Abhinav Shrivastava},
-year={2023},
-journal={Under Review},
+year={2024},
+journal={Winter Conference on Applications of Computer Vision (WACV)},
 eprint={2308.09716},
 archivePrefix={arXiv},
 primaryClass={cs.CV},
@@ -67,7 +77,7 @@ preview = {diff2lip.png}
 title={Diffusion Models Beat GANs on Image Classification}, 
 author={Soumik Mukhopadhyay* and Matthew Gwilliam* and Vatsal Agarwal and Namitha Padmanabhan and Archana Swaminathan and Srinidhi Hegde and Tianyi Zhou and Abhinav Shrivastava},
 year={2023},
-journal={Under Review},
+journal={arXiv preprint},
 eprint={2307.08702},
 archivePrefix={arXiv},
 primaryClass={cs.CV},
