added diffssl2 pdf

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -50,7 +50,7 @@ title={Do text-free diffusion models learn discriminative visual representations
 author={Soumik Mukhopadhyay* and Matthew Gwilliam* and Yosuke Yamaguchi† and Vatsal Agarwal† and Namitha Padmanabhan and Archana Swaminathan and Tianyi Zhou and Abhinav Shrivastava},
 year={2023},
 journal={Under Review},
-pdf = {https://drive.google.com/file/d/1ZnDbLKVxjwr07YPRVjPrwF0vmnRxeUNe/view?usp=sharing},
+pdf = {DiffusionSelfSup.pdf},
 selected = {true},
 preview = {diffssl2.png},
 }
