--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -26,7 +26,7 @@ preview={rigid-deformable.png}
 
 
 @inproceedings{10.1117/12.2580891,
-author = {Soumik Mukhopadhyay and Praful Mathur and Aditya Bharadwaj and Yuri Son and Jun-Sung Park and Srinivas Rao Kudavelly and Sangha Song and Hokyung Kang},
+author = {Soumik Mukhopadhyay and Praful Mathur and Aditya Bhardwaj and Yuri Son and Jun-Sung Park and Srinivas Rao Kudavelly and Sangha Song and Hokyung Kang},
 title = {{Deep learning based needle tracking in prostate fusion biopsy}},
 volume = {11598},
 booktitle = {Medical Imaging 2021: Image-Guided Procedures, Robotic Interventions, and Modeling},
@@ -47,7 +47,7 @@ preview={needle-detection.png}
 
 @article{mukhopadhyay2023diffusion2,
 title={Do text-free diffusion models learn discriminative visual representations?}, 
-author={Soumik Mukhopadhyay* and Matthew Gwilliam* and Yosuke Yamaguchi† and Vatsal Agarwal† and Namitha Padmanabhan and Archana Swaminathan and Tianyi Zhou and Abhinav Shrivastava},
+author={Soumik Mukhopadhyay* and Matthew Gwilliam* and Yosuke Yamaguchi and Vatsal Agarwal and Namitha Padmanabhan and Archana Swaminathan and Tianyi Zhou and Abhinav Shrivastava},
 year={2023},
 journal={Under Review},
 pdf = {DiffusionSelfSup.pdf},
