colab link to personal website

--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -84,6 +84,7 @@ code={https://github.com/soumik-kanad/diffssl}
     selected = {true},
     preview = {diff2lip.png},
     code = {https://github.com/soumik-kanad/diff2lip},
+    colab = {https://colab.research.google.com/drive/1YXGFXWclLZnBLe16_Cp5q8O9vyp7utCn?usp=sharing},
     poster = {https://drive.google.com/file/d/1jFIU1gXQw-5ncs7PP4mGjZPQOAVmXWt1/view?usp=sharing},
     slides = {https://docs.google.com/presentation/d/1x5JnxY41JaVzlVRhrwGRJgZtc-AjSWYQ/edit?usp=sharing&ouid=109422112213001881069&rtpof=true&sd=true},
     video = {https://drive.google.com/file/d/1kiTdnve2v7c8yGsaVELqjUraDgPISYvR/view?usp=sharing}
