--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -45,11 +45,12 @@ selected={true},
 preview={needle-detection.png}
 }
 
-@article{mukhopadhyay2023textfree,
-title={Do text-free diffusion models learn discriminative visual representations?}, 
+@InProceedings{mukhopadhyay2023textfree,
 author={Soumik Mukhopadhyay* and Matthew Gwilliam* and Yosuke Yamaguchi and Vatsal Agarwal and Namitha Padmanabhan and Archana Swaminathan and Tianyi Zhou and Abhinav Shrivastava},
-year={2023},
-journal={Under Review},
+title={Do text-free diffusion models learn discriminative visual representations?}, 
+booktitle = {Proceedings of the European Conference on Computer Vision (ECCV)},
+month = {September},
+year={2024},
 eprint={2311.17921},
 archivePrefix={arXiv},
 primaryClass={cs.CV},
